# ot-efr32

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ot-efr32.slce  ot-efr32.slsdk  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  checks.yml  docker.yml  dockerhub-publish.yml  metadata.yml
docker/: Dockerfile  base.Dockerfile  ot-efr32-dev.Dockerfile  test-ot-efr32-dev.yml
examples/: CMakeLists.txt
examples/example_vendor_slc_extension/: CMakeLists.txt  README.md  config.yml  example_vendor.slce
examples/example_vendor_slc_extension/component/: my_custom_board.slcc  vendor_diag.slcc
examples/example_vendor_slc_extension/projects/: example-vendor-rcp-spi.slcp  example-vendor-rcp-uart.slcp  example-vendor-soc-with-buttons.slcp  example-vendor-soc.slcp
examples/example_vendor_slc_extension/script/: build  generate
examples/example_vendor_slc_extension/src/: diag.c  diag.h
examples/sleepy-demo/: CMakeLists.txt  README.md  app.c  app.h  main.c  sleepy-demo-ftd.cmake  sleepy-demo-mtd.cmake  sleepy-demo-ssed.cmake  sleepy-ftd.c  sleepy-mtd.c  sleepy-ssed.c
examples/sleepy-demo/sleepy-demo-ftd/: CMakeLists.txt  main.c
examples/sleepy-demo/sleepy-demo-mtd/: main.c
script/: bootstrap  bootstrap_silabs  build  build_example_apps  efr32-definitions  generate  generate_cmake.py  make-pretty  slc_cli  test  util
slc/component/: crypto_pbkdf2_generate_key.slcc  ot_crash_handler.slcc  ot_platform_abstraction_source.slcc  ot_psa_crypto.slcc
slc/exporter_templates/platform_library/: CMakeLists.txt.jinja  custom.Makefile  custom.project.mak  macros.jinja  mbedtls.cmake.jinja
slc/platform_projects/: openthread-efr32-rcp-spi.slcp  openthread-efr32-rcp-uart.slcp  openthread-efr32-soc-with-buttons-power-manager-csl.slcp  openthread-efr32-soc-with-buttons-power-manager.slcp  openthread-efr32-soc-with-buttons.slcp  openthread-efr32-soc.slcp
slc/slc_cli/: changelog  readme.md  slc  slc.bat
src/: CMakeLists.txt  README.md
src/efr32mg1/: README.md  arm-none-eabi.cmake  efr32mg1.cmake
src/efr32mg1/crypto/: mbedtls_config_autogen.h  psa_crypto_config_autogen.h
src/efr32mg12/: README.md  efr32mg12.cmake
src/efr32mg12/brd4170a/: board_config.h
src/efr32mg12/crypto/: psa_crypto_config_autogen.h
src/efr32mg12/phy/: PHY_IEEE802154_915MHZ_2GFSK_EFR32XG12.c  PHY_IEEE802154_915MHZ_OQPSK_EFR32XG12.c
src/efr32mg13/: README.md
src/efr32mg13/crypto/: mbedtls_config_autogen.h  psa_crypto_config_autogen.h
src/efr32mg21/: README.md
src/efr32mg21/crypto/: mbedtls_config_autogen.h  psa_crypto_config_autogen.h
src/efr32mg24/: arm-none-eabi.cmake
src/efr32zg23/: arm-none-eabi.cmake
src/efr32zg23/phy/: PHY_IEEE802154_915MHZ_2GFSK_EFR32XG23.h
src/efr32zg28/: arm-none-eabi.cmake
src/efr32zg28/phy/: PHY_IEEE802154_915MHZ_2GFSK_EFR32XG23.c  PHY_IEEE802154_915MHZ_OQPSK_EFR32XG23.c  PHY_IEEE802154_915MHZ_OQPSK_EFR32XG23.h
src/openthread/core/: vendor_extension.cpp
src/platform_projects/: openthread-efr32-rcp-spi.slcp  openthread-efr32-rcp-uart.slcp  openthread-efr32-rcp.slcp  openthread-efr32-soc-with-buttons-power-manager-csl.slcp  openthread-efr32-soc-with-buttons-power-manager.slcp  openthread-efr32-soc-with-buttons.slcp  openthread-efr32-soc.slcp  ot-efr32-rcp.slcp  ot-efr32-soc.slcp
src/sleepy-demo/: README.md
src/sleepy-demo/sleepy-demo-mtd/: CMakeLists.txt  main.c
src/src/: CMakeLists.txt  README_DIAG.md  alarm.c  board_config.h  crypto.c  crypto.cpp  diag.c  entropy.c  flash.c  ieee802154-packet-utils.cpp  ieee802154-packet-utils.hpp  ieee802154mac.h  iostream_uart.c  logging.c  logging_backchannel.c  mbedtls_config.h  misc.c  openthread-core-efr32-config-check.h  openthread-core-efr32-config.h  platform-band.h  platform-efr32.h  psa_crypto_config.h  radio.c  radio_coex.c  radio_extension.c  radio_power_manager.c  radio_vendor.c  rail_config.h  security_manager.c  security_manager.h  sl_gp_interface.c  sl_gp_interface.h  sl_mbedtls_config_transform_autogen.h  sl_multipan.h  sl_openthread.h  sl_packet_utils.h  sl_rcp_gp_interface.c  sl_rcp_gp_interface.h  sleep.c  sleep.h  (+7 more)
